Fri Mar  4 10:21:55 CST 2016

        Fixed nipasswd so it runs "obscure" checks correctly.

        Dropped ENABLE_BADPW_CHECK configuration setting. Bad password
        check should always be run.

        Dropped FORCE_HTTPS configuration setting and make secure
        connection required.

        Converted INSTALL to INSTALL.md

        Normalized file headers.

Thu Mar  3 10:37:58 CST 2016

	Added FORCE_HTTPS configuration setting to force application
	to run on a secure connection.

	Added CGIEXT configuration setting to add an optional suffix
	(like ".cgi") to the installed CGI script file.

	Renamed getline() function to avoid lib conflict on build.

	Now uses Perl Template Toolkit to render HTML. Template
	file now called chpass.tmpl.

	Rewrote README and INSTALL.

	Moved to "unlicense" (public domain) and added LICENSE file.

	Moved distribution point to github.

	Tested with a modern Linux (Debian 8 Jessie) and in an LDAP
	environment.

Version 1.4 - 21-Dec-2006

	Fix "Unexpected PAM message (PAM_TEXT_INFO): Password
	changed." problem reported on SuSE 10.1 by Sven Sohnel.

Version 1.3 - 12-Nov-2006

	Give useful message when password has expired (PAM_NEW_AUTHTOK_REQD).

	Resolve Fedora 5 portability issues reported by
	Steve Mokris <smokris@softpixel.com>.  (Thanks for the patch.)

version 1.2 - 15-Jun-2003

	No longer ship a pam.d/nipasswd file.  The one that used to be
	here only worked on Red Hat Linux.  Instead, on installation,
	we'll make it by copying the existing PAM module for the "passwd"
	utility.

Version 1.1 - 24-Aug-2002

	Added BADPW_CHECKS configuration setting, to allow the bad
	password checks to be enabled, disabled, or optional.  Added
	MIN_AUTH_UID and MIN_CHANGE_UID configuration settings, so that
	new min UID feature can be used without hacking the source code.

	Thanks to Dan Senie for the useful suggestions.

Version 1.0 - 24-Aug-2002

	Added minimum UID checks, to avoid accessing/changing system
	accounts.
